force-app/main/default/objects/kuga_FinanceChargeRule__c/kuga_FinanceChargeRule__c.object-meta.xml
<CustomObject>
    <description>For Kugamon Project FS04 - add Admin controls to Finance Order function</description>
    <label>Finance Charge Rule</label>
    <nameField>
        <displayFormat>FCR-{000}</displayFormat>
        <label>Rule Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Charge Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>