force-app/main/default/objects/kuga_FinanceChargeRule__c/fields/kuga_IsFinanceCharged__c.field-meta.xml
<CustomField>
    <fullName>kuga_IsFinanceCharged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Kugamon Project FS04 - add Admin controls to Finance Order function</description>
    <inlineHelpText>Is Interest Calculated</inlineHelpText>
    <label>Is Finance Charged</label>
    <type>Checkbox</type>
</CustomField>