force-app/main/default/objects/kuga_FinanceChargeRule__c/fields/kuga_IsFinanceOverride__c.field-meta.xml
<CustomField>
    <fullName>kuga_IsFinanceOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Kugamon Project FS04 - add Admin controls to Finance Order function</description>
    <inlineHelpText>Not Visible to Reps (Not Standard), Only Visible when Order &apos;Finance Override&apos; is checked.</inlineHelpText>
    <label>Is Finance Override</label>
    <type>Checkbox</type>
</CustomField>