force-app/main/default/objects/kuga_FinanceChargeRule__c/fields/kuga_KugamonSetting__c.field-meta.xml
<CustomField>
    <fullName>kuga_KugamonSetting__c</fullName>
    <description>For Kugamon Project FS04 - add Admin controls to Finance Order function</description>
    <label>Kugamon Setting</label>
    <referenceTo>kugo2p__KugamonSetting__c</referenceTo>
    <relationshipLabel>Finance Charge Rules</relationshipLabel>
    <relationshipName>Finance_Charge_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>