force-app/main/default/objects/kuga_FinanceChargeRule__c/fields/kuga_MinimumInitialPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>kuga_MinimumInitialPaymentAmount__c</fullName>
    <description>For Kugamon Project FS04 - add Admin controls to Finance Order function</description>
    <label>Minimum Initial Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>