force-app/main/default/objects/kuga_FinanceChargeRule__c/fields/kuga_MinimumOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>kuga_MinimumOrderAmount__c</fullName>
    <description>For Kugamon Project FS04 - add Admin controls to Finance Order function</description>
    <inlineHelpText>Initial Payment Amount is the Greater of Initial Payment Amount or Order Amount / Month Count</inlineHelpText>
    <label>Minimum Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>