force-app/main/default/objects/kuga_FinanceChargeRule__c/fields/kuga_Term__c.field-meta.xml
<CustomField>
    <fullName>kuga_Term__c</fullName>
    <description>For Kugamon Project FS04 - add Admin controls to Finance Order function,</description>
    <inlineHelpText>Finance Order function supports only Term (Month) values 2 or higher</inlineHelpText>
    <label>Term (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>