force-app/main/default/objects/kuga_FinanceChargeRule__c/validationRules/TermCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>TermCheck</fullName>
    <active>true</active>
    <description>Finance Order function supports only Term (Month) values 2 or higher</description>
    <errorConditionFormula>OR(ISBLANK(kuga_Term__c), 
kuga_Term__c &lt; 2)</errorConditionFormula>
    <errorMessage>Finance Order function supports only Term (Month) values 2 or higher</errorMessage>
</ValidationRule>